--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/byoung2/morphmail-node#readme",
   "dependencies": {
-    "ipaddr.js": "^2.0.1"
+    "bitcoinjs-lib": "^6.0.1",
+    "bitcoinjs-message": "^2.2.0",
+    "ecpair": "^2.0.1",
+    "ipaddr.js": "^2.0.1",
+    "tiny-secp256k1": "^2.2.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "mocha": "^9.2.0"
   }
 }
