--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "bitcoinjs-lib": "^6.0.1",
     "bitcoinjs-message": "^2.2.0",
+    "crypto-js": "^4.1.1",
     "ecpair": "^2.0.1",
     "ipaddr.js": "^2.0.1",
+    "lodash": "^4.17.21",
     "tiny-secp256k1": "^2.2.0"
   },
   "devDependencies": {
