--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ecpair": "^2.0.1",
     "ipaddr.js": "^2.0.1",
     "lodash": "^4.17.21",
-    "tiny-secp256k1": "^2.2.0"
+    "tiny-secp256k1": "^2.2.0",
+    "vm2": "^3.9.6"
   },
   "devDependencies": {
     "chai": "^4.3.6",
