Improvement: adding IPv6 sorting for peers

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ecpair": "^2.0.1",
     "ipaddr.js": "^2.0.1",
     "lodash": "^4.17.21",
+    "node-json-db": "^1.4.1",
     "tiny-secp256k1": "^2.2.0",
     "vm2": "^3.9.6"
   },
