--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "bitcoinjs-message": "^2.2.0",
     "crypto-js": "^4.1.1",
     "ecpair": "^2.0.1",
+    "external-ip": "^2.3.1",
     "inquirer": "^8.2.0",
     "ipaddr.js": "^2.0.1",
     "lodash": "^4.17.21",
     "node-json-db": "^1.4.1",
+    "openpgp": "^5.2.0",
     "tiny-secp256k1": "^2.2.0",
-    "vm2": "^3.9.6"
+    "uuid": "^8.3.2",
+    "vm2": "^3.9.6",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
