--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "bitcoinjs-lib": "^6.0.1",
     "bitcoinjs-message": "^2.2.0",
     "crypto-js": "^4.1.1",
+    "dkim-signer": "0.2.2",
     "ecpair": "^2.0.1",
     "external-ip": "^2.3.1",
     "inquirer": "^8.2.0",
     "ipaddr.js": "^2.0.1",
     "lodash": "^4.17.21",
+    "mailcomposer": "3.12.0",
+    "node-cron": "^3.0.0",
     "node-json-db": "^1.4.1",
     "openpgp": "^5.2.0",
+    "smtp-server": "^3.10.0",
     "tiny-secp256k1": "^2.2.0",
     "uuid": "^8.3.2",
     "vm2": "^3.9.6",
