--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/byoung2/morphmail-node#readme",
   "dependencies": {
+    "base58-js": "^1.0.0",
     "bitcoinjs-lib": "^6.0.1",
     "bitcoinjs-message": "^2.2.0",
     "crypto-js": "^4.1.1",
+    "csv-parse": "^5.1.0",
     "dkim-signer": "0.2.2",
     "ecpair": "^2.0.1",
     "external-ip": "^2.3.1",
@@ -30,6 +32,7 @@
     "node-cron": "^3.0.0",
     "node-json-db": "^1.4.1",
     "openpgp": "^5.2.0",
+    "reverse-line-reader": "^0.2.6",
     "smtp-server": "^3.10.0",
     "tiny-secp256k1": "^2.2.0",
     "uuid": "^8.3.2",
